--- a/TODO
+++ b/TODO
@@ -1,17 +1,28 @@
 
 Survey: 
-  ☐ Add functionality to navigation
-  ☐ Create skeleton
-  ☐ Style skeleton
-  ☐ Input Data
+  ✔ Add functionality to navigation @done(22-05-12 04:47)
+  ✔ Create skeleton @done(22-05-12 04:47)
+  ✔ Style skeleton @done(22-05-12 04:47)
+  ✔ Input Data @done(22-05-12 04:47)
+  ☐ Add logic to disable proceeding further than last question answered + 1
+  ☐ Dynamic styling on navigation buttons based on displayedCardIndex. Gray out button that is inactive.
+
+ChatIcon:
+  ☐ Add popup to call user's attention.
 
 
 Carousel:
 Stretch
+☐ Remove empty space when you reach end of carousel
+☐ Show/Hide navigation buttons based on displayed card
+  Stretch:
+  ☐ Improve card styling/Add border
   ☐ Add swipe interaction to carousel
-  ☐ Remove empty space when you reach end of carousel
-  ☐ Show/Hide navigation buttons based on viewport position
-    
+
+FAQ:
+  ☐ Ask what they want to do with the section.
+  ☐ Ask for content of answers to questions.
+
 
 Archive:
   ✔ Add ProductSection to Categories.js @started(22-04-30 16:04) @done(22-04-30 16:32) @lasted(28m49s) @project(Home Page)
