--- a/TODO
+++ b/TODO
@@ -1,32 +1,34 @@
+☐ Add footer
 
-Survey: 
-  ✔ Add functionality to navigation @done(22-05-12 04:47)
-  ✔ Create skeleton @done(22-05-12 04:47)
-  ✔ Style skeleton @done(22-05-12 04:47)
-  ✔ Input Data @done(22-05-12 04:47)
-  ✔ Add logic to disable proceeding further than last question answered @done(22-05-12 20:53)
-  Decided that dynamically rendering rather than changin styles looks better for the user and is simpler code
-  ✘ Dynamic styling on navigation buttons based on displayedCardIndex. Gray out button that is inactive. @cancelled(22-05-12 20:53) 
+Nav:
+  ☐ Add nav menu
 
-ChatIcon:
-  ✔ Add popup to call user's attention. @done(22-05-12 21:58)
 
-ChatBox:
-  ✔ Fix close button position to align with rest of header @done(22-05-13 02:01)
+Home: 
+  ☐ Add background image on hero for desktop/high resolution views
+  ☐ Change flex direction of info cards
+  ☐ Change image for 'sem custos' card
+  ☐ Improve card styling
 
 Carousel:
-  ☐ Remove empty space when you reach end of carousel
-  ☐ Show/Hide navigation buttons based on displayed card
-    Stretch:
-    ☐ Improve card styling/Add border
     ☐ Add swipe interaction to carousel
 
   FAQ:
     ☐ Ask what they want to do with the section.
     ☐ Ask for content of answers to questions.
 
-
 Archive:
+  ✔ Add functionality to navigation @done(22-05-12 04:47) @project(Survey)
+  ✔ Create skeleton @done(22-05-12 04:47) @project(Survey)
+  ✔ Style skeleton @done(22-05-12 04:47) @project(Survey)
+  ✔ Input Data @done(22-05-12 04:47) @project(Survey)
+  ✔ Add logic to disable proceeding further than last question answered @done(22-05-12 20:53) @project(Survey)
+  ✘ Dynamic styling on navigation buttons based on displayedCardIndex. Gray out button that is inactive. @cancelled(22-05-12 20:53)  @project(Survey)
+  ✔ Add popup to call user's attention. @done(22-05-12 21:58) @project(ChatIcon)
+  ✔ Fix close button position to align with rest of header @done(22-05-13 02:01) @project(ChatBox)
+  ✔ Remove empty space when you reach end of carousel @done(22-05-13 05:17) @project(Carousel)
+  ✔ Show/Hide navigation buttons based on displayed card @done(22-05-13 05:17) @project(Carousel)
+  ✔ Improve card styling/Add border @done(22-05-13 05:17) @project(Carousel)
   ✔ Add ProductSection to Categories.js @started(22-04-30 16:04) @done(22-04-30 16:32) @lasted(28m49s) @project(Home Page)
   ✔ Improve carousel item styling @started(22-04-30 16:36) @done(22-04-30 16:49) @lasted(13m49s) @project(Home Page)
   ✔ Add navigation buttons to carousel @started(22-04-30 20:29) @done(22-05-01 00:16) @lasted(3h47m43s) @project(Home Page)
