--- a/TODO
+++ b/TODO
@@ -2,11 +2,11 @@
 
 Nav:
   ✔ Add nav menu --mobile @done(22-05-15 05:57)
-  ☐ Add nav menu --desktop
-  ☐ Add clareadores link
+  ✔ Add nav menu --desktop @done(22-05-15 19:58)
+  ✘ Add clareadores link @cancelled(22-05-15 20:00)
 
 Questionnaire: 
-  ☐ Add numbers
+  ✔ Add numbers @done(22-05-15 20:12)
   ☐ Add progress bar
 
 Home: 
