Remove build folder

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
+Bring up in Meeting: 
+  ☐ The site is all over the place. Sections in nav menu is not congruent with tab sections
+
 Web optimization:
-  ☐ Implement Google Analytics
+  ☐ Implement Google Analytics @started(22-05-21 16:11)
   ☐ Add SEO optimization
 
 
