Add Google Analytics

--- a/TODO
+++ b/TODO
@@ -2,7 +2,9 @@ Bring up in Meeting:
   ☐ The site is all over the place. Sections in nav menu is not congruent with tab sections
 
 Web optimization:
-  ☐ Implement Google Analytics @started(22-05-21 16:11)
+  ✔ Implement Google Analytics @started(22-05-21 16:11) @done(22-05-21 19:46) @lasted(3h35m21s)
+  ☐ Find out how demographics work
+  ☐ Add Google Analytics events
   ☐ Add SEO optimization
 
 
